Generating JRE image during compilation